# alien

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ps1.template  config.sh.template  generate_self_signed.sh  get_js_integrity_hashes.sh
public_html/: alien.css  alien.js  index.html
src/: controllers.rs  main.rs  models.rs
src/controllers/: auth_controller.rs  fs_controller.rs
src/models/: auth_model.rs  resp_model.rs
