[package]
name = "alien"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-extra = "0.4.2"
include_dir = "0.7.3"
mime_guess = "2.0.4"
mongodb = "2.3.1"
tokio = { version = "1.23.0", features = ["full"] }