[package]
name = "alien"
version = "0.1.0"
edition = "2021"
authors = ["Ty Qualters <contact@tyqualters.com>"]
repository = ""
license = "MIT"
description = "A basic chat server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-extra = "0.4.2"
include_dir = "0.7.3"
mime_guess = "2.0.4"
mongodb = { version = "2.3.1", features = ["zlib-compression", "zstd-compression", "snappy-compression"] }
tokio = { version = "1.23.0", features = ["full"] }
#tokio-rustls = "0.23.4"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tower-http = { version = "0.3.5", features = ["full"] }
rust-crypto = "0.2.36"
